Fixed final session state